# ursa

./: .gitignore  CMakeLists.txt  README.md  do_cmake.sh  do_hls_all.sh  do_hls_config.cfg.in
src/: im2col.cpp  im2col.h  math_sa.h  pe.h  shell.cpp  shell.h
tb/: cnn_conv_engine.cpp  cnn_conv_engine.h  cnn_eval_images.h  cnn_network.h  cnn_weights.h  cnn_weights_qonnx_t2w8.cpp  cnn_weights_qonnx_t3w8.cpp  math_tb.h  tb_cnn_sat_6_1.cpp
ursa_prebuilt_ips/: README.md
ursa_prebuilt_ips/zynq/: ursa_16x16_compile.rpt  ursa_16x16_v++_compile_guidance.html  ursa_4x4_compile.rpt  ursa_4x4_v++_compile_guidance.html  ursa_8x8_compile.rpt  ursa_8x8_v++_compile_guidance.html
version/v1/: README.md
version/v1/src/: math_sa.h  pe.cpp  sa.cpp  sa.h  shell.cpp  shell.h
version/v1/tb/: cnn_conv_engine.cpp  cnn_conv_engine.h  cnn_network.h  cnn_weights_qonnx_t3w8.cpp  tb_cnn_sat_6_1.cpp
vitis_app_component/: cnn_conv_engine.cpp  cnn_conv_engine.h  cnn_eval_images_hwc_8_8_18.cpp  cnn_network.h  cnn_weights.h  cnn_weights_qonnx_t3w8.cpp  lscript.ld  math_q_scaled_int.cpp  math_tb.h  tb_cnn_sat_6_1.cpp  timer.cpp  timer.h
vitis_app_component/mxm_execute_ursa_v1_0/: CMakeLists.txt  MXM_EXECUTE_URSAConfig.cmake  Makefile  xmxm_execute_ursa.c  xmxm_execute_ursa_g.c
vitis_app_component/mxm_execute_ursa_v1_0/data/: mxm_execute_ursa.tcl
vitis_app_component/mxm_execute_ursa_v1_0/src/: xmxm_execute_ursa_hw.h
vivado_project/v1_pelletron/: .gitignore  bd_hybrid_wrapper.xsa  bd_v2_wrapper.xsa  bd_wrapper.xsa  bd_wrapper_v1_6_6.xsa  plataform_ocm_ps7.xsa  sa.xpr
vivado_project/v1_pelletron/ip/bitstream/: bd_hybrid_wrapper.bit  bd_v2_wrapper.bit  bd_wrapper.bit
vivado_project/v1_pelletron/ip/sa_10_10/: component.xml
vivado_project/v2_automated_flow/: .gitignore  bd_8x8_bram_wrapper.xsa  ursa.xpr
(+5334 files in other folders)
